@@ -1,3 +1,7 @@
+pre 0.11.2:
+- auto enable on delay implemented by filling the queue with pause
+  This allows approx. 60/120 ms delay for avr/esp32
+
 0.11.1:
 - AVR works again
 - Limit auto enable on delay to approx. 16ms due to further bugs
